# dependabot-enable

./: Cargo.toml  README.md
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
src/: cli.rs  dependabot.rs  lib.rs  main.rs
