[package]
name = "dependabot-enable"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/dependabot-enable"
documentation = "https://docs.rs/dependabot-enable"
description = "Enable dependabot on a repository."
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"

[dependencies]
failure = "0.1.2"
exitfailure = "0.5.1"
human-panic = "1.0.1"
structopt = "0.2.10"
log = "0.4.5"
clap_flags = "0.3.0"
serde = "1.0.76"
serde_derive = "1.0.76"
serde_json = "1.0.26"
reqwest = "0.8.8"
github_auth = "0.7.0"
github-local-remote = "0.1.0"

[dev-dependencies]

[build-dependencies]
mkdirp = "0.1.0"
structopt = "0.2.10"
clap_flags = "0.3.0"
failure = "0.1.2"
serde = "1.0.76"
serde_derive = "1.0.76"
serde_json = "1.0.26"
reqwest = "0.8.8"
